--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "Project4/pgm_map_creator"]
 	path = Project4/pgm_map_creator
 	url = https://github.com/hyfan1116/pgm_map_creator.git
+[submodule "Project3/pgm_map_creator"]
+	path = Project3/pgm_map_creator
+	url = https://github.com/hyfan1116/pgm_map_creator.git
+[submodule "Project3/teleop_twist_keyboard"]
+	path = Project3/teleop_twist_keyboard
+	url = https://github.com/ros-teleop/teleop_twist_keyboard.git
